fixing layout on smaller phones, add spacing below issues list on mobile

--- a/src/components/shared/scss/_issues.scss
+++ b/src/components/shared/scss/_issues.scss
@@ -5,6 +5,12 @@
     box-shadow: none;
   }
 
+  margin-bottom: 1.5rem;
+
+  @include bp(medium) {
+    margin-bottom: 0;
+  }
+
   &__header {
     text-align: center;
     background-color: #fff;
